--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -29,7 +29,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="{{ path('dashboard_videos') }}">Accueil</a></li>
                             <li><a href="#">Nos Réalisations</a></li>
-                            <li><a href="#">Préstations</a></li>
+                            <li><a href="#">Prestations</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
