--- a/app/Resources/views/video_add.html.twig
+++ b/app/Resources/views/video_add.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container-fluid">
+    <div class="container-fluid" id="background">
         <div class="row">
             <div class="col-lg-offset-3 col-lg-6 text-center">
                 {{ form_start(
@@ -27,8 +27,8 @@
                     {{ form_label(form_create.description,"Description") }}
                     {{ form_widget(form_create.description, {'attr':{'class':'form-control'}})}}
 
-                    {{ form_label(form_create.url,"URL") }}
-                    {{ form_widget(form_create.url, {'attr':{'class':'form-control'}})}}
+                    {{ form_label(form_create.youtubeId,"Youtube ID") }}
+                    {{ form_widget(form_create.youtubeId, {'attr':{'class':'form-control'}})}}
                     <br>
                     <div class="text-center">
                         {{ form_widget(form_create.save,{'attr':{'class':'btn btn-info '}})}}
