--- a/app/Resources/views/Dashboard/video_update.html.twig
+++ b/app/Resources/views/Dashboard/video_update.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig'%}
+{% extends ':Front:base.html.twig' %}
 {% block title %}
     PanameWorldTV - Modification d'une vidéo
 {% endblock %}
