--- a/app/Resources/views/Dashboard/videos.html.twig
+++ b/app/Resources/views/Dashboard/videos.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig'%}
+{% extends ':Front:base.html.twig' %}
 {% block title %}
     PanameWorldTV - Liste des vidéos
 {% endblock %}
