--- a/app/Resources/views/Front/index.html.twig
+++ b/app/Resources/views/Front/index.html.twig
@@ -16,7 +16,7 @@
                 </h1>
                 {#<img id="#" src="https://img.youtube.com/vi/ezf16XM7XCc/mqdefault.jpg"/>#}
             </div>
-            <div class="col-lg-offset-2 col-lg-8">
+            <div class="col-lg-offset-1 col-lg-10">
                 <nav class="navbar navbar-inverse">
                     <div class="container-fluid">
                         <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,6 +32,7 @@
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
                                 <li><a href="{{ path('home') }}"><span class="glyphicon glyphicon-home"></span></a></li>
+                                <li><a href="#contact"> Chroniques d'Aliya Stars ⭐👩🏾‍🎤</a> </li>
                                 <li><a>Événements 📆</a></li>
                                 <li><a href="#realisations">Nos Réalisations 🎞</a></li>
                                 <li><a>Qui sommes-nous ❓</a></li>
@@ -100,22 +101,6 @@
                             </div>
                         </div>
                     {% endfor %}
-
-                    {# <div class="col-lg-4">
-                         <div class="embed-responsive embed-responsive-16by9">
-                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XGSy3_Czz8k"></iframe>
-                         </div>
-                     </div>
-                     <div class="col-lg-4">
-                         <div class="embed-responsive embed-responsive-16by9">
-                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XGSy3_Czz8k"></iframe>
-                         </div>
-                     </div>
-                     <div class="col-lg-4">
-                         <div class="embed-responsive embed-responsive-16by9">
-                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XGSy3_Czz8k"></iframe>
-                         </div>
-                     </div>#}
                 </div>
             </div>
         </div>
@@ -135,10 +120,13 @@
                 </a>
 
             </div>
-            <div class="col-lg-4 text-center give-padding-2">
+            <div class="col-lg-3 text-center give-padding-2">
                 <a class="container_sm" href="https://www.instagram.com/panameworldtv/?hl=fr" target="_blank">
                     <span class="fa fa-inverse fa-instagram fa-3x"></span> <p class="social-media">@panameworldtv</p>
                 </a>
+            </div>
+            <div class="col-lg-3 text-center give-padding-2">
+                <span class="fa fa-inverse fa-phone fa-3x"></span> <p class="social-media"> +33 7 515 137 37</p>
             </div>
 
         </div>
@@ -180,5 +168,18 @@
         $('iframe').on('click',function () {
             alert('ok');
         });
+
+
+    </script>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-99115279-1', 'auto');
+        ga('send', 'pageview');
+
     </script>
 {% endblock %}
