--- a/app/Resources/views/Front/base.html.twig
+++ b/app/Resources/views/Front/base.html.twig
@@ -13,7 +13,7 @@
 </head>
 <body id="background_anim">
 {% block body %}
-    <div class="container-fluid" id="background_anim">
+    {#<div class="container-fluid" id="background_anim">
         <div class="row">
             <div class="col-lg-12 text-center" id="text_home">
                 <p class="give-margin-top">BIENVENUE - WELCOME - 欢迎</p>
@@ -38,11 +38,11 @@
                     <a class="btn btn-default" href="{{ path('home') }}">Entrer</a>
                 </div>
             </div>
-            {#<div class="col-lg-12">
+            #}{#<div class="col-lg-12">
                 <audio src="{{ asset('bundles/app/audio/son_intro.mp3') }}" autoplay loop></audio>
-            </div>#}
+            </div>#}{#
         </div>
-    </div>
+    </div>#}
 {% endblock %}
 {% block javascripts %}
 
