--- a/app/Resources/views/Dashboard/index.html.twig
+++ b/app/Resources/views/Dashboard/index.html.twig
@@ -31,6 +31,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a href="{{ path('dashboard_videos') }}">Videos</a></li>
                                 <li><a href="#">Newsletter</a></li>
+                                <li><a href="{{ path('fos_user_security_logout') }}">Déconnexion</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </div><!-- /.container-fluid -->
